crates/edgezero-macros/tests/ui/secret_on_non_scalar.stderr
error: `#[secret]` / `#[secret(store_ref)]` may only annotate a scalar string field (e.g. `String`)
 --> tests/ui/secret_on_non_scalar.rs:7:17
  |
7 |     api_tokens: Vec<String>,
  |                 ^^^^^^^^^^^
